-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.0 Beta4
-
None
This is caught by headersclean, since headers aren't allowed to have any warnings.
This API needs to be redesigned.
/home/tjmaciei/src/qt/qt5/qtmultimedia/src/multimedia/playback/qmediaplayer.h:159:57: error: ‘QNetworkConfiguration’ is deprecated [-Werror=deprecated-declarations]
159 | QNetworkConfiguration currentNetworkConfiguration() const;
| ^~~~~
In file included from /home/tjmaciei/obj/qt/qt5-release/qtbase/include/QtNetwork/qnetworkconfiguration.h:1,
from /home/tjmaciei/src/qt/qt5/qtmultimedia/src/multimedia/playback/qmediaplayer.h:48:
/home/tjmaciei/obj/qt/qt5-release/qtbase/include/QtNetwork/../../../../../../src/qt/qt5/qtbase/src/network/bearer/qnetworkconfiguration.h:60:56: note: declared here
60 | class QT_DEPRECATED_BEARER_MANAGEMENT Q_NETWORK_EXPORT QNetworkConfiguration
| ^~~~~~~~~~~~~~~~~~~~~
/home/tjmaciei/src/qt/qt5/qtmultimedia/src/multimedia/playback/qmediaplayer.h:184:47: error: ‘QNetworkConfiguration’ is deprecated [-Werror=deprecated-declarations]
184 | void setNetworkConfigurations(const QList<QNetworkConfiguration> &configurations);
| ^~~~~~~~~~~~~~~~~~~~~
In file included from /home/tjmaciei/obj/qt/qt5-release/qtbase/include/QtNetwork/qnetworkconfiguration.h:1,
from /home/tjmaciei/src/qt/qt5/qtmultimedia/src/multimedia/playback/qmediaplayer.h:48:
/home/tjmaciei/obj/qt/qt5-release/qtbase/include/QtNetwork/../../../../../../src/qt/qt5/qtbase/src/network/bearer/qnetworkconfiguration.h:60:56: note: declared here
60 | class QT_DEPRECATED_BEARER_MANAGEMENT Q_NETWORK_EXPORT QNetworkConfiguration
| ^~~~~~~~~~~~~~~~~~~~~
/home/tjmaciei/src/qt/qt5/qtmultimedia/src/multimedia/playback/qmediaplayer.h:211:80: error: ‘QNetworkConfiguration’ is deprecated [-Werror=deprecated-declarations]
211 | void networkConfigurationChanged(const QNetworkConfiguration &configuration);
| ^
| For Gerrit Dashboard: QTBUG-83692 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 297816,3 | Fix warning about QNetworkConfiguration being deprecated | 5.15.0 | qt/qtmultimedia | Status: MERGED | +2 | 0 |