Fix warning about QNetworkConfiguration being deprecated

It's going away in Qt 6.0.

Task-number: QTBUG-83692
Change-Id: I9709abb1c3734e10a7defffd1607e1160da1e75c
Reviewed-by: Mårten Nordheim <marten.nordheim@qt.io>