src/multimedia/playback/qmediaplayer.cpp
@@ -731,6 +731,8 @@ void QMediaPlayer::setPlaylist(QMediaPlaylist *playlist)
     setMedia(m);
 }
 
+QT_WARNING_PUSH
+QT_WARNING_DISABLE_DEPRECATED
 /*!
     \obsolete
 
@@ -747,6 +749,7 @@ void QMediaPlayer::setNetworkConfigurations(const QList<QNetworkConfiguration> &
     if (d->networkAccessControl)
         d->networkAccessControl->setConfigurations(configurations);
 }
+QT_WARNING_POP
 
 QMediaPlayer::State QMediaPlayer::state() const
 {
@@ -872,6 +875,8 @@ QString QMediaPlayer::errorString() const
     return d_func()->errorString;
 }
 
+QT_WARNING_PUSH
+QT_WARNING_DISABLE_DEPRECATED
 /*!
     \obsolete
 
@@ -889,6 +894,8 @@ QNetworkConfiguration QMediaPlayer::currentNetworkConfiguration() const
 
     return QNetworkConfiguration();
 }
+QT_WARNING_POP
+
 
 //public Q_SLOTS:
 /*!
